force-app/main/default/objects/Account/fields/Customer_1_Drivers_License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Drivers_License_Expiration__c</fullName>
    <label>Customer #1 Drivers License Expiration</label>
    <type>Date</type>
</CustomField>