force-app/main/default/objects/Account/fields/Customer_1_Drivers_License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Drivers_License_Issue_Date__c</fullName>
    <label>Customer #1 Drivers License Issue Date</label>
    <type>Date</type>
</CustomField>