force-app/main/default/objects/Account/fields/Customer_1_Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Employer_Address__c</fullName>
    <formula>Customer_1_Street_Employer__c +&quot; &quot;+ Customer_1_City_Employer__c +&quot; &quot;+ Customer_1_State_Employer__c +&quot; &quot;+ Customer_1_Zip_Employer__c</formula>
    <label>Customer #1 Employer Address</label>
    <type>Text</type>
</CustomField>