force-app/main/default/objects/Account/fields/Customer_1_Income__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Income__c</fullName>
    <label>Customer #1 Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>