force-app/main/default/objects/Account/fields/Customer_1_Occupation_Previous__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Occupation_Previous__c</fullName>
    <label>Customer #1 Occupation Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>