force-app/main/default/objects/Account/fields/Customer_1_Per_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Per_1__c</fullName>
    <label>Customer #1 Per 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>