force-app/main/default/objects/Account/fields/Customer_1_Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Previous_Employer__c</fullName>
    <label>Customer #1 Previous Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>