force-app/main/default/objects/Account/fields/Customer_1_State_Employer__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_State_Employer__c</fullName>
    <label>Customer #1 State Employer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>