force-app/main/default/objects/Account/fields/Customer_1_Zip_Employer__c.field-meta.xml
<CustomField>
    <fullName>Customer_1_Zip_Employer__c</fullName>
    <label>Customer #1 Zip Employer</label>
    <length>5</length>
    <type>Text</type>
</CustomField>