force-app/main/default/objects/Account/fields/Customer_2_DOB__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_DOB__c</fullName>
    <label>Customer #2 DOB</label>
    <type>Date</type>
</CustomField>