force-app/main/default/objects/Account/fields/Customer_2_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Drivers_License__c</fullName>
    <label>Customer #2 Drivers License</label>
    <length>18</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>