force-app/main/default/objects/Account/fields/Customer_2_Employer__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Employer__c</fullName>
    <label>Customer #2 Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>