force-app/main/default/objects/Account/fields/Customer_2_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Employer_Phone__c</fullName>
    <label>Customer #2 Employer Phone</label>
    <type>Phone</type>
</CustomField>