force-app/main/default/objects/Account/fields/Customer_2_Employer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Employer_type__c</fullName>
    <label>Customer 2 Employer type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>