force-app/main/default/objects/Account/fields/Customer_2_Employment_Position__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Employment_Position__c</fullName>
    <label>Customer #2 Employment Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>