force-app/main/default/objects/Account/fields/Customer_2_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Hire_Date__c</fullName>
    <label>Customer 2 Hire Date</label>
    <type>Date</type>
</CustomField>