force-app/main/default/objects/Account/fields/Customer_2_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Net_Income__c</fullName>
    <label>Customer 2 Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>