force-app/main/default/objects/Account/fields/Customer_2_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Other_Income__c</fullName>
    <inlineHelpText>social security, alimony, child support, etc.</inlineHelpText>
    <label>Customer #2 Other Income</label>
    <length>250</length>
    <type>Text</type>
</CustomField>