force-app/main/default/objects/Account/fields/Customer_2_Per_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Per_2__c</fullName>
    <label>Customer #2 Per 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>