force-app/main/default/objects/Account/fields/Customer_2_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Per_Month__c</fullName>
    <label>Customer #2 Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>