force-app/main/default/objects/Account/fields/Customer_2_Previous_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Previous_Employer_Phone__c</fullName>
    <label>Customer #2 Previous Employer Phone</label>
    <type>Phone</type>
</CustomField>