force-app/main/default/objects/Account/fields/Customer_2_SSN__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_SSN__c</fullName>
    <label>Customer #2 SSN</label>
    <length>11</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>