force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Hot Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>