force-app/main/default/objects/Account/fields/Date_Stamp_Consent_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Consent_Opt_out__c</fullName>
    <label>Date Stamp: Consent Opt-out</label>
    <type>Date</type>
</CustomField>