force-app/main/default/objects/Account/fields/Date_Stamp_Email__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_Email__c</fullName>
    <label>Date Stamp</label>
    <type>Date</type>
</CustomField>