force-app/main/default/objects/Account/fields/ddsign__emial_1__c.field-meta.xml
<CustomField>
    <fullName>ddsign__emial_1__c</fullName>
    <label>emial 1</label>
    <type>Email</type>
</CustomField>