force-app/main/default/objects/Account/fields/Dealer_Program_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Program_Opinion__c</fullName>
    <label>Dealer Program - Opinion</label>
    <type>TextArea</type>
</CustomField>