force-app/main/default/objects/Account/fields/Delivery_Count__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Count__c</fullName>
    <description>Delivery Count before the respond Date</description>
    <label>Delivery Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>