force-app/main/default/objects/Account/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Captures the date at which the package was dropped and delivered to the customer.</description>
    <inlineHelpText>Captures the date at which the package was dropped and delivered to the customer.</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>