force-app/main/default/objects/Account/fields/Delivery_Point_Validation_Vacant__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Point_Validation_Vacant__c</fullName>
    <label>Delivery Point Validation Vacant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>