force-app/main/default/objects/Account/fields/Disposition_2__c.field-meta.xml
<CustomField>
    <fullName>Disposition_2__c</fullName>
    <label>Disposition - Solar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dispositions</valueSetName>
    </valueSet>
</CustomField>