force-app/main/default/objects/Account/fields/Dispositioned_By__c.field-meta.xml
<CustomField>
    <fullName>Dispositioned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispositioned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>