force-app/main/default/objects/Account/fields/DNC_Carpet_Tile_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>DNC_Carpet_Tile_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Carpet &amp; Tile Cleaning</label>
    <type>Checkbox</type>
</CustomField>