force-app/main/default/objects/Account/fields/DNC_Flooring__c.field-meta.xml
<CustomField>
    <fullName>DNC_Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Flooring</label>
    <type>Checkbox</type>
</CustomField>