force-app/main/default/objects/Account/fields/DNC_Garage_Doors__c.field-meta.xml
<CustomField>
    <fullName>DNC_Garage_Doors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Garage Doors</label>
    <type>Checkbox</type>
</CustomField>