force-app/main/default/objects/Account/fields/DNC_Garage_Floor_Coating__c.field-meta.xml
<CustomField>
    <fullName>DNC_Garage_Floor_Coating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Garage Floor Coating</label>
    <type>Checkbox</type>
</CustomField>