force-app/main/default/objects/Account/fields/DNC_Handy_Man__c.field-meta.xml
<CustomField>
    <fullName>DNC_Handy_Man__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Handy Man</label>
    <type>Checkbox</type>
</CustomField>