force-app/main/default/objects/Account/fields/DNC_Home_Automation__c.field-meta.xml
<CustomField>
    <fullName>DNC_Home_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Home Automation</label>
    <type>Checkbox</type>
</CustomField>