force-app/main/default/objects/Account/fields/DNC_HVAC__c.field-meta.xml
<CustomField>
    <fullName>DNC_HVAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC HVAC</label>
    <type>Checkbox</type>
</CustomField>