force-app/main/default/objects/Account/fields/DNC_Internet_Cable_Satellite__c.field-meta.xml
<CustomField>
    <fullName>DNC_Internet_Cable_Satellite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Internet, Cable, Satellite</label>
    <type>Checkbox</type>
</CustomField>