force-app/main/default/objects/Account/fields/DNC_Kitchen_Bath__c.field-meta.xml
<CustomField>
    <fullName>DNC_Kitchen_Bath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Kitchen &amp; Bath</label>
    <type>Checkbox</type>
</CustomField>