force-app/main/default/objects/Account/fields/DNC_Lock_Smith__c.field-meta.xml
<CustomField>
    <fullName>DNC_Lock_Smith__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Lock Smith</label>
    <type>Checkbox</type>
</CustomField>