force-app/main/default/objects/Account/fields/DNC_Maid_Service__c.field-meta.xml
<CustomField>
    <fullName>DNC_Maid_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Maid Service</label>
    <type>Checkbox</type>
</CustomField>