force-app/main/default/objects/Account/fields/DNC_Painting__c.field-meta.xml
<CustomField>
    <fullName>DNC_Painting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Painting</label>
    <type>Checkbox</type>
</CustomField>