force-app/main/default/objects/Account/fields/DNC_Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>DNC_Pest_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Pest Control</label>
    <type>Checkbox</type>
</CustomField>