force-app/main/default/objects/Account/fields/DNC_Pool_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>DNC_Pool_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Pool Maintenance</label>
    <type>Checkbox</type>
</CustomField>