force-app/main/default/objects/Account/fields/DNC_Remodel__c.field-meta.xml
<CustomField>
    <fullName>DNC_Remodel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Remodel</label>
    <type>Checkbox</type>
</CustomField>