force-app/main/default/objects/Account/fields/DNC_Solar__c.field-meta.xml
<CustomField>
    <fullName>DNC_Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Solar</label>
    <type>Checkbox</type>
</CustomField>