force-app/main/default/objects/Account/fields/DNC_Water__c.field-meta.xml
<CustomField>
    <fullName>DNC_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Water</label>
    <type>Checkbox</type>
</CustomField>