force-app/main/default/objects/Account/fields/DNC_Window__c.field-meta.xml
<CustomField>
    <fullName>DNC_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC Window</label>
    <type>Checkbox</type>
</CustomField>