force-app/main/default/objects/Account/fields/Do_Not_Call_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Date_Stamp__c</fullName>
    <description>Captures the date at which the rep set the Person Account to Do Not Call per customer request.</description>
    <label>Do Not Call Date Stamp</label>
    <type>DateTime</type>
</CustomField>