force-app/main/default/objects/Account/fields/Do_You_Currently__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Currently__c</fullName>
    <label>Do You Currently</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Sell Accounts</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>