force-app/main/default/objects/Account/fields/dob2__c.field-meta.xml
<CustomField>
    <fullName>dob2__c</fullName>
    <label>dob2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>