force-app/main/default/objects/Account/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <label>dob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>