force-app/main/default/objects/Account/fields/Docusign_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Account_Number__c</fullName>
    <label>Docusign Account Number</label>
    <length>22</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>