force-app/main/default/objects/Account/fields/Docusign_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Address_Line_1__c</fullName>
    <label>Docusign Address Line 1</label>
    <type>TextArea</type>
</CustomField>