force-app/main/default/objects/Account/fields/Docusign_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Address_Line_2__c</fullName>
    <label>Docusign Address Line 2</label>
    <type>TextArea</type>
</CustomField>