force-app/main/default/objects/Account/fields/Docusign_Banking_Institution__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Banking_Institution__c</fullName>
    <label>Docusign Banking Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>