force-app/main/default/objects/Account/fields/Docusign_City__c.field-meta.xml
<CustomField>
    <fullName>Docusign_City__c</fullName>
    <label>Docusign City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>