force-app/main/default/objects/Account/fields/Docusign_Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Credit_Card_Number__c</fullName>
    <label>Docusign Credit Card Number</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>