force-app/main/default/objects/Account/fields/Docusign_CVV_Security_Code_JCB__c.field-meta.xml
<CustomField>
    <fullName>Docusign_CVV_Security_Code_JCB__c</fullName>
    <label>Docusign CVV Security Code JCB</label>
    <length>5</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>