force-app/main/default/objects/Account/fields/Docusign_Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Expiration_Month__c</fullName>
    <label>Docusign Expiration Month</label>
    <length>2</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>