force-app/main/default/objects/Account/fields/Docusign_Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Expiration_Year__c</fullName>
    <label>Docusign Expiration Year</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>