force-app/main/default/objects/Account/fields/Docusign_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Last_Name__c</fullName>
    <label>Docusign Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>