force-app/main/default/objects/Account/fields/Docusign_Name_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Name_On_Account__c</fullName>
    <label>Docusign Name On Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>