force-app/main/default/objects/Account/fields/Docusign_Name_On_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Name_On_Credit_Card__c</fullName>
    <label>Docusign Name On Credit Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>