force-app/main/default/objects/Account/fields/Docusign_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Routing_Number__c</fullName>
    <label>Docusign Routing Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>