force-app/main/default/objects/Account/fields/Docusign_Zip__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Zip__c</fullName>
    <label>Docusign Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>