force-app/main/default/objects/Account/fields/Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As__c</fullName>
    <description>&quot;DBA&quot;</description>
    <label>Doing Business As</label>
    <length>80</length>
    <type>Text</type>
</CustomField>