force-app/main/default/objects/Account/fields/Doorbell__c.field-meta.xml
<CustomField>
    <fullName>Doorbell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doorbell</label>
    <type>Checkbox</type>
</CustomField>